--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ body {
     animation-name: nucba;
     animation-duration: 4s;
     animation-delay: 1s;
+    animation-iteration-count: infinite;
     visibility: hidden;
 
 }
