--- a/media.css
+++ b/media.css
@@ -93,14 +93,17 @@
     .card_hero {
         width: 90%;
         height: 60%;
+        gap: 3rem;
 
     }
 
     .card_hero h1 {
-        width: 25rem
+        width: 25rem;
+        text-align: center;
     }
 
     .card_hero p {
+        text-align: center;
         width: 25rem;
         font-size: 1.7rem;
     }
@@ -158,16 +161,25 @@
     }
 
     @media (max-height:600px) {
+
         .container_header {
             background-position-y: 30px;
         }
 
         /* ***SECTION 1 */
+        /* .card_hero {
+            width: 80%;
+
+    
+        } */
         .card_hero h1 {
+            align-self: center;
+            width: 80%;
             font-size: 2rem;
         }
 
         .card_hero p {
+            width: 100%;
             font-size: 1.1rem;
         }
 
